--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Fast and accurate React renderer for Notion. TS batteries included.",
   "repository": "NotionX/react-notion-x",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
+  "author": "Travis Fischer <travis@transitivebullsh.it>, Jackson Goode",
   "license": "MIT",
   "engines": {
     "node": ">=12"
